Fix information container margin, padding, info item size and alignment

--- a/styles.css
+++ b/styles.css
@@ -97,19 +97,21 @@ h2 {
 .information-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
+  margin-bottom: 80px;
 }
 
 .info-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .rounded-square {
-  width: 150px;
-  height: 150px;
-  border: 5px solid #3882f6;
+  width: 120px;
+  height: 120px;
+  border: 3px solid #3882f6;
   border-radius: 12px;
 }
 
